css/player.css
@keyframes sidebarAppear {
	from {
		width: 0;
	}
	to {
		width: 304px;
	}
}

@keyframes sidebarDisappear {
	from {
		width: 304px;
	}
	to {
		width: 0;
	}
}

.ayamelPlayer {
	font-family: 'Source Sans Pro', sans-serif;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.ayamelPlayer .playerTop {
	min-height: 10px;
	background: #333;
	-webkit-border-radius: 8px 8px 0 0;
	-moz-border-radius: 8px 8px 0 0;
	border-radius: 8px 8px 0 0;
}

.ayamelPlayer .topPane {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	height: 100%;
	position: relative;
	overflow: hidden;
}

.ayamelPlayer .topPane .mediaPlayer {
	line-height: 100%;
	height: 100%;
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	display: inline-block;
}

.ayamelPlayer .topPane .sidebar {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	display: inline-block;
	vertical-align: top;
	position: relative;
}

.ayamelPlayer .sidebar.invisible {
	visibility: visible;
	width: 0;
}

.ayamelPlayer .sidebar.visible {
	width: 304px;
}

.ayamelPlayer .sidebar .hideButton {
	opacity: .5;
	margin: 10px;
	position: absolute;
	height: 30px;
}

.ayamelPlayer .sidebar .hideButton:hover {
    opacity: 1;
	
}

.ayamelPlayer .sidebar.leftBar .hideButton {
    right: 0;
}

.ayamelPlayer .sidebarNav {
	height: 0px;
	position: absolute;
	padding: 0 0 0 0;
}

.ayamelPlayer .sidebarNav ul li {
	padding: 15px 15px 15px 15px;
	border: 1px solid lightgrey;
	opacity: 0;
	color: #4d4d4d;
	display: inline;
	background-color: white;
	margin: 0px 0px 0 0px;
	cursor: default;
}

.ayamelPlayer .sidebarNav ul li:hover {
}

.ayamelPlayer .sidebarNav ul li.selected {
	background-color: white;
}

.ayamelPlayer .sidebar .sidebarNav ul {
	position: relative;
	width: 304px;
	-webkit-transform-origin: 0 100%;
	-moz-transform-origin: 0 100%;
	-ms-transform-origin: 0 100%;
	-o-transform-origin: 0 100%;
	transform-origin: 0 100%;
	margin: 50px 0 0 0;
}

.ayamelPlayer .sidebar.leftBar.invisible .sidebarNav ul {
	-webkit-transform: rotateZ(90deg) translateX(-16px);
	-moz-transform: rotateZ(90deg) translateX(-16px);
	-ms-transform: rotateZ(90deg) translateX(-16px);
	-o-transform: rotateZ(90deg) translateX(-16px);
	transform: rotateZ(90deg) translateX(-16px);
}

.ayamelPlayer .sidebar.leftBar.visible .sidebarNav ul {
	-webkit-transform: rotateZ(90deg) translateX(-16px) translateY(-303px);
	-moz-transform: rotateZ(90deg) translateX(-16px) translateY(-303px);
	-ms-transform: rotateZ(90deg) translateX(-16px) translateY(-303px);
	-o-transform: rotateZ(90deg) translateX(-16px) translateY(-303px);
    transform: rotateZ(90deg) translateX(-16px) translateY(-303px);
}

.ayamelPlayer .sidebar.rightBar.invisible .sidebarNav ul {
	-webkit-transform: rotateZ(90deg) translateX(-16px) translateY(21px);
	-moz-transform: rotateZ(90deg) translateX(-16px) translateY(21px);
	-ms-transform: rotateZ(90deg) translateX(-16px) translateY(21px);
	-o-transform: rotateZ(90deg) translateX(-16px) translateY(21px);
	transform: rotateZ(90deg) translateX(-16px) translateY(21px);
}

.ayamelPlayer .sidebar.rightBar.visible .sidebarNav ul {
	-webkit-transform: rotateZ(90deg) translateX(-16px) translateY(20px);
	-moz-transform: rotateZ(90deg) translateX(-16px) translateY(20px);
	-ms-transform: rotateZ(90deg) translateX(-16px) translateY(20px);
	-o-transform: rotateZ(90deg) translateX(-16px) translateY(20px);
	transform: rotateZ(90deg) translateX(-16px) translateY(20px);
}

.ayamelPlayer .rightBar .sidebarNav ul {
	border-bottom: none;
}

.ayamelPlayer .leftBar .sidebarNav ul {
	border-top: none;
}

.ayamelPlayer .rightBar .sidebarNav li.selected {
	padding-top: 15px;
	-webkit-transform-origin: 50% 50%;
	-moz-transform-origin: 50% 50%;
	-ms-transform-origin: 50% 50%;
	-o-transform-origin: 50% 50%;
	transform-origin: 50% 50%;
	-webkit-transform: rotateZ(180deg);
	-moz-transform: rotateZ(180deg);
	-ms-transform: rotateZ(180deg);
	-o-transform: rotateZ(180deg);
	transform: rotateZ(180deg);
}

.ayamelPlayer .rightBar .sidebarNav li.unselected {
	-webkit-transform-origin: 50% 50%;
	-moz-transform-origin: 50% 50%;
	-ms-transform-origin: 50% 50%;
	-o-transform-origin: 50% 50%;
	transform-origin: 50% 50%;
	-webkit-transform: translateX(100px);
	-moz-transform: translateX(100px);
	-ms-transform: translateX(100px);
	-o-transform: translateX(100px);
	transform: translateX(100px);
}

.ayamelPlayer .topPane:hover .sidebarNav ul li {
    opacity: 1;
}

.ayamelPlayer .sidebarNav ul li:hover {
}

.ayamelPlayer .rightBar .sidebarNav li {
    padding: 1px 15px;
    border-radius: 0 0 5px 5px;
}

.ayamelPlayer .leftBar .sidebarNav ul li {
    border-radius: 5px 5px 0 0;
    padding: 0px 15px;
}

.ayamelPlayer .leftBar .sidebarNav ul li.selected {
    padding-bottom: 15px;
}

.ayamelPlayer .sidebar .tabContent div.hidden {
	display: none;
}

.ayamelPlayer .sidebar.invisible .tabContent {
	display: none;
}

.ayamelPlayer .rightBar .tabBody {
    margin-top: 50px;
    margin-left: 30px;
    margin-bottom: 50px;
    margin-right: 15px;
}

.ayamelPlayer .sidebar .tabContent {
	overflow: auto;
	overflow-wrap: break-word;
	padding: 0 0 0 0;
}

.ayamelPlayer .sidebar .tabContent {
	padding: 0 0 0 0;
}

.ayamelPlayer .leftBar .tabBody {
    margin: 50px 30px 50px 15px;
}

.ayamelPlayer .topPane .sidebar .toggle-tab {
	width: 20px;
	height: 100px;
	background-color: red;
	top: 0;
	opacity: 0;
	position: absolute;
}

.ayamelPlayer .topPane .rightBar .toggle-tab {
	left: -20px;
}

.ayamelPlayer .progressBar {
	height: 20px;
	background: #222;
	position: relative;

	-webkit-box-shadow: inset 1px 2px 7px rgba(0, 0, 0, 0.7);
	-moz-box-shadow: inset 1px 2px 7px rgba(0, 0, 0, 0.7);
	box-shadow: inset 1px 2px 7px rgba(0, 0, 0, 0.7);

	padding: 0 10px;
	border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}
/* ... */

